--- a/HealthEase/Healthease.API/.env
+++ b/HealthEase/Healthease.API/.env
@@ -1,1 +1,1 @@
-CONNECTION_STRING="Server=localhost;Database=HealthEase;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+CONNECTION_STRING="Server=localhost;Database=170001;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
