--- a/HealthEase/UI/healthease_desktop/pubspec.yaml
+++ b/HealthEase/UI/healthease_desktop/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   quickalert: ^1.1.0
   json_annotation: ^4.9.0
   provider: ^6.1.4
+  intl: ^0.20.2
+  fl_chart: ^0.71.0
 
 dev_dependencies:
   flutter_test:
