--- a/HealthEase/UI/healthease_desktop/pubspec.yaml
+++ b/HealthEase/UI/healthease_desktop/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.4
   intl: ^0.20.2
   fl_chart: ^0.71.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
