--- a/HealthEase/UI/healthease_desktop/pubspec.yaml
+++ b/HealthEase/UI/healthease_desktop/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.20.2
   fl_chart: ^0.71.0
   image_picker: ^1.1.2
+  window_manager: ^0.4.3
 
 dev_dependencies:
   flutter_test:
