--- a/HealthEase/UI/healthease_mobile/pubspec.yaml
+++ b/HealthEase/UI/healthease_mobile/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_paypal_payment: ^1.0.8
   flutter_dotenv: ^5.2.1
+  flutter_slidable: ^4.0.0
 
 dev_dependencies:
   flutter_test:
